Update Astro Config examples to `defineConfig` (#2635)
* Update Astro Config examples to `defineConfig`

* Update all exports to `defineConfig({})`

Also included `title="astro.config.mjs"` where applicable

* Correct highlighting

* add missing parenthesis

--- a/src/pages/en/guides/markdown-content.mdx
+++ b/src/pages/en/guides/markdown-content.mdx
@@ -97,8 +97,9 @@ const nonDraftPosts = posts.filter((post) => !post.frontmatter.draft);
 
 To enable building draft pages by default, update `astro.config.mjs` by adding `drafts: true` to `markdown` or to the `mdx` integration:
 
-```js ins={4, 7}
-// astro.config.mjs
+```js title="astro.config.mjs" ins={5, 8}
+import { defineConfig } from 'astro/config';
+
 export default defineConfig({
   markdown: {
     drafts: true,
@@ -461,12 +462,12 @@ import { defineConfig } from 'astro/config';
 import remarkToc from 'remark-toc';
 import { rehypeAccessibleEmojis } from 'rehype-accessible-emojis';
 
-export default {
+export default defineConfig({
   markdown: {
     // Applied to .md and .mdx files
     remarkPlugins: [remarkToc, rehypeAccessibleEmojis],
   },
-}
+});
 ```
 
 #### Heading IDs and plugins
@@ -477,18 +478,18 @@ You can customize these heading IDs by adding a rehype plugin that injects `id` 
 
 By default, Astro injects `id` attributes after your rehype plugins have run. If one of your custom rehype plugins needs to access the IDs injected by Astro, you can import and use Astro’s `rehypeHeadingIds` plugin directly. Be sure to add `rehypeHeadingIds` before any plugins that rely on it:
 
-```js {2,7}
-// astro.config.mjs
+```js {2,7} title="astro.config.mjs"
+import { defineConfig } from 'astro/config';
 import { rehypeHeadingIds } from '@astrojs/markdown-remark';
 
-export default {
+export default defineConfig({
   markdown: {
     rehypePlugins: [
       rehypeHeadingIds,
       otherPluginThatReliesOnHeadingIDs,
     ],
   },
-}
+});
 ```
 
 ### Modifying frontmatter programmatically
@@ -515,28 +516,30 @@ You can add frontmatter properties to all of your Markdown and MDX files by usin
 2. Apply this plugin to your `markdown`  or `mdx` integration config:
 
     ```js title="astro.config.mjs" "import { exampleRemarkPlugin } from './example-remark-plugin.mjs';" "remarkPlugins: [exampleRemarkPlugin],"
+    import { defineConfig } from 'astro/config';
     import { exampleRemarkPlugin } from './example-remark-plugin.mjs';
 
-    export default {
+    export default defineConfig({
       markdown: {
         remarkPlugins: [exampleRemarkPlugin],
         extendDefaultPlugins: true,
       },
-    };
+    });
 
     ```
     or
 
     ```js title="astro.config.mjs" "import { exampleRemarkPlugin } from './example-remark-plugin.mjs';" "remarkPlugins: [exampleRemarkPlugin],"
+    import { defineConfig } from 'astro/config';
     import { exampleRemarkPlugin } from './example-remark-plugin.mjs';
 
-    export default {
+    export default defineConfig({
       integrations: [
         mdx({
           remarkPlugins: [exampleRemarkPlugin],
         }),
       ],
-    }
+    });
     ```
 
 Now, every Markdown or MDX file will have `customProperty` in its frontmatter, making it available when [importing your markdown](#importing-markdown) and from [the `Astro.props.frontmatter` property in your layouts](#frontmatter-layout).
@@ -571,14 +574,15 @@ export function remarkReadingTime() {
 Once you apply this plugin to your config:
 
 ```js title="astro.config.mjs" "import { remarkReadingTime } from './remark-reading-time.mjs';" "remarkPlugins: [remarkReadingTime],"
+import { defineConfig } from 'astro/config';
 import { remarkReadingTime } from './remark-reading-time.mjs';
 
-export default {
+export default defineConfig({
   markdown: {
     remarkPlugins: [remarkReadingTime],
     extendDefaultPlugins: true,
   },
-};
+});
 
 ```
 
@@ -604,8 +608,7 @@ Astro's MDX integration will extend [your project's existing Markdown configurat
 
 The following example disables GitHub-Flavored Markdown and applies a different set of remark plugins for MDX files:
 
-```ts
-// astro.config.mjs
+```ts title="astro.config.mjs"
 import { defineConfig } from 'astro/config';
 import mdx from '@astrojs/mdx';
 
@@ -631,8 +634,7 @@ export default defineConfig({
 
 To avoid extending your Markdown config from MDX, set [the `extendMarkdownConfig` option](/en/guides/integrations-guide/mdx/#extendmarkdownconfig) (enabled by default) to `false`:
 
-```ts
-// astro.config.mjs
+```ts title="astro.config.mjs"
 import { defineConfig } from 'astro/config';
 import mdx from '@astrojs/mdx';
 
@@ -664,9 +666,10 @@ Shiki is enabled by default, preconfigured with the `github-dark` theme. The com
 
 Shiki is our default syntax highlighter. You can configure all options via the `shikiConfig` object like so:
 
-```js
-// astro.config.mjs
-export default {
+```js title="astro.config.mjs"
+import { defineConfig } from 'astro/config';
+
+export default defineConfig({
   markdown: {
     shikiConfig: {
       // Choose from Shiki's built-in themes (or add your own)
@@ -680,7 +683,7 @@ export default {
       wrap: true,
     },
   },
-};
+});
 ```
 
 #### Adding your own theme
@@ -704,14 +707,15 @@ We also suggest reading [Shiki's own theme documentation](https://github.com/shi
 
 If you'd like to switch to `'prism'` by default, or disable syntax highlighting entirely, you can use the `markdown.syntaxHighlighting` config object:
 
-```js ins={5}
-// astro.config.mjs
-export default {
+```js title="astro.config.mjs" ins={6}
+import { defineConfig } from 'astro/config';
+
+export default defineConfig({
   markdown: {
     // Can be 'shiki' (default), 'prism' or false to disable highlighting
     syntaxHighlight: 'prism',
   },
-};
+});
 ```
 
 #### Prism configuration
