--- a/src/pages/en/guides/integrations-guide.mdx
+++ b/src/pages/en/guides/integrations-guide.mdx
@@ -142,7 +142,7 @@ To remove an integration, first uninstall the integration from your project
   </Fragment>
 </PackageManagerTabs>
 
-Next, remove the integration from your `astro.config.*` file
+Next, remove the integration from your `astro.config.*` file:
 
 ```js title="astro.config.mjs" del={3,7}
 import { defineConfig } from 'astro/config'
