--- a/src/pages/en/guides/integrations-guide.mdx
+++ b/src/pages/en/guides/integrations-guide.mdx
@@ -120,6 +120,42 @@ integrations: [
 ]
 ```
 
+## Removing an Integration
+
+To remove an integration, first uninstall the integration from your project
+
+<PackageManagerTabs>
+  <Fragment slot="npm">
+  ```shell
+  npm uninstall @astrojs/image
+  ```
+  </Fragment>
+  <Fragment slot="pnpm">
+  ```shell
+  pnpm uninstall @astrojs/image
+  ```
+  </Fragment>
+  <Fragment slot="yarn">
+  ```shell
+  yarn remove @astrojs/image
+  ```
+  </Fragment>
+</PackageManagerTabs>
+
+Next, remove the integration from your `astro.config.*` file:
+
+```js title="astro.config.mjs" del={3,7}
+import { defineConfig } from 'astro/config'
+
+import image from "@astrojs/image";
+
+export default defineConfig({
+  integrations: [
+    image()
+  ]
+})
+```
+
 ## Finding More Integrations
 
 You can find many integrations developed by the community in the [Astro Integrations Directory](https://astro.build/integrations/). Follow links there for detailed usage and configuration instructions.
