Update liftoff message in auto.mdx

--- a/src/pages/en/install/auto.mdx
+++ b/src/pages/en/install/auto.mdx
@@ -53,7 +53,7 @@ Run the following command in your terminal to start our handy install wizard:
 
 You can run `create astro` anywhere on your machine, so there's no need to create a new empty directory for your project before you begin. If you don't have an empty directory yet for your new project, the wizard will help create one for you automatically.
 
-If all goes well, you should see a "Ready for liftoff!" message followed by some recommended "Next steps". `cd` into your new project directory to begin using Astro. 
+If all goes well, you should see a "Liftoff confirmed. Explore your project!" message followed by some recommended next steps. `cd` into your new project directory to begin using Astro.
 
 If you skipped the `npm install` step during the CLI wizard, then be sure to install your dependencies before continuing.
 
