Add example using PNPM
Co-authored-by: Dan Jutan <danjutan@gmail.com>

--- a/src/pages/en/guides/deploy/google-cloud.mdx
+++ b/src/pages/en/guides/deploy/google-cloud.mdx
@@ -50,7 +50,18 @@ EXPOSE 80
 ```
 
 :::note[notes]
-Keep in mind you might need to change `node:lts` to a pinned version, if you're using another package manager than `npm`, you might need to install it and change the scripts.
+If you're using a package manager other than `npm`, you'll need to change the commands:
+
+```docker title="Dockerfile" add={4} "pnpm"
+FROM node:lts as build
+WORKDIR /app
+COPY . .
+RUN npm i -g pnpm@latest
+RUN pnpm i
+RUN pnpm run build
+...
+```
+
 :::
 
 ##### Dockerfile for SSR sites (example)
