--- a/src/pages/en/guides/deploy/google-cloud.mdx
+++ b/src/pages/en/guides/deploy/google-cloud.mdx
@@ -94,7 +94,7 @@ FROM node:lts-alpine as runtime
 
 #### 3. Deploying the container
 
-Deployment can be handled manually in terminal or automatically using [Cloud Build](https://cloud.google.com/build) or any other CI/CD system.
+Deployment can be handled manually in your terminal or automatically using [Cloud Build](https://cloud.google.com/build) or any other CI/CD system.
 
 :::note[Need public access?]
 Don't forget to add the permission `Cloud Run Invoker` to the `allUsers` group in the Cloud Run permissions settings!
