Update bullet points

--- a/src/pages/en/guides/deploy/google-cloud.mdx
+++ b/src/pages/en/guides/deploy/google-cloud.mdx
@@ -30,7 +30,9 @@ Cloud Run is a serverless platform that allows you to run a container without ha
 There are a couple of ways to build the container:
 
 - Locally using Docker
+  - Requires you to build with `docker build` command and push to a remote using `docker push`. (That would be Artifact registry or container registry on Google Cloud)
 - Using [Cloud Build](https://cloud.google.com/build)
+  - To setup a pipeline with CloudBuild, you have to add a separate `cloudbuild.yaml` file with a description what the pipeline should do. [Check the Google Cloud Build documentation here](<https://cloud.google.com/build/docs/build-push-docker-image>).
 - Using any other CI/CD tool (e.g. [GitHub Actions](<https://docs.github.com/en/actions/publishing-packages/publishing-docker-images>))
 
 ##### Dockerfile for static sites (example)
