add import for dummy plugin

--- a/src/pages/en/guides/markdown-content.mdx
+++ b/src/pages/en/guides/markdown-content.mdx
@@ -481,6 +481,7 @@ By default, Astro injects `id` attributes after your rehype plugins have run. If
 ```js title="astro.config.mjs" ins={2, 7}
 import { defineConfig } from 'astro/config';
 import { rehypeHeadingIds } from '@astrojs/markdown-remark';
+import { otherPluginThatReliesOnHeadingIDs } from 'some/plugin/source';
 
 export default defineConfig({
   markdown: {
