--- a/src/pages/en/guides/markdown-content.mdx
+++ b/src/pages/en/guides/markdown-content.mdx
@@ -487,7 +487,7 @@ export default defineConfig({
   markdown: {
     rehypePlugins: [
       rehypeHeadingIds,
-      // otherPluginThatReliesOnHeadingIDs,
+      otherPluginThatReliesOnHeadingIDs,
     ],
   },
 });
