docs: markdown-content: use `defineConfig` consistently (#2618)
* docs: markdown-content: use `defineConfig` consistently

- use `defineConfig` consistently
- use the code "title" when not used

* Update markdown-content.mdx

* add import for dummy plugin

* uncomment out dummy plugin

* correct syntax line highlight

---------

Co-authored-by: Sarah Rainsberger <sarah@rainsberger.ca>

--- a/src/pages/en/guides/markdown-content.mdx
+++ b/src/pages/en/guides/markdown-content.mdx
@@ -478,9 +478,10 @@ You can customize these heading IDs by adding a rehype plugin that injects `id` 
 
 By default, Astro injects `id` attributes after your rehype plugins have run. If one of your custom rehype plugins needs to access the IDs injected by Astro, you can import and use Astro’s `rehypeHeadingIds` plugin directly. Be sure to add `rehypeHeadingIds` before any plugins that rely on it:
 
-```js {2,7} title="astro.config.mjs"
+```js title="astro.config.mjs" ins={2, 8}
 import { defineConfig } from 'astro/config';
 import { rehypeHeadingIds } from '@astrojs/markdown-remark';
+import { otherPluginThatReliesOnHeadingIDs } from 'some/plugin/source';
 
 export default defineConfig({
   markdown: {
@@ -525,8 +526,8 @@ You can add frontmatter properties to all of your Markdown and MDX files by usin
         extendDefaultPlugins: true,
       },
     });
-
     ```
+
     or
 
     ```js title="astro.config.mjs" "import { exampleRemarkPlugin } from './example-remark-plugin.mjs';" "remarkPlugins: [exampleRemarkPlugin],"
@@ -583,7 +584,6 @@ export default defineConfig({
     extendDefaultPlugins: true,
   },
 });
-
 ```
 
 ...all Markdown documents will have a calculated `minutesRead`. You can use this to include an "X min read" banner in a [markdown layout](#markdown-and-mdx-pages), for instance:
