Define options more clear

--- a/src/pages/en/guides/deploy/google-cloud.mdx
+++ b/src/pages/en/guides/deploy/google-cloud.mdx
@@ -27,13 +27,19 @@ Cloud Run is a serverless platform that allows you to run a container without ha
 
 #### 2. Building the container
 
-There are a couple of ways to build the container:
+There are a few different ways listed below to build a container.
 
-- Locally using Docker
-  - Requires you to build with `docker build` command and push to a remote using `docker push`. (That would be Artifact registry or container registry on Google Cloud)
-- Using [Cloud Build](https://cloud.google.com/build)
-  - To setup a pipeline with CloudBuild, you have to add a separate `cloudbuild.yaml` file with a description what the pipeline should do. [Check the Google Cloud Build documentation here](<https://cloud.google.com/build/docs/build-push-docker-image>).
-- Using any other CI/CD tool (e.g. [GitHub Actions](<https://docs.github.com/en/actions/publishing-packages/publishing-docker-images>))
+**Locally using Docker**:
+
+This option, requires you to build you `Dockerfile` on your local machine and then push to a remote. You can achieve this with the `docker build` command. If you want to push to a remote from your local machine, you'll have to use `docker push`. In the case of Google Cloud, Artifact registry or Container registry, are the easiest option, but you can also use [Docker hub](<https://hub.docker.com/>).
+
+**Using [Cloud Build](https://cloud.google.com/build)**:
+
+To setup a pipeline with Cloud Build, you have to add a separate `cloudbuild.yaml` file with a description what the pipeline should do. You can [check the Google Cloud Build documentation here](<https://cloud.google.com/build/docs/build-push-docker-image>).
+
+**Using another tool**:
+
+You can also use any other CI/CD tool you like, that supports docker. (e.g. [GitHub Actions](<https://docs.github.com/en/actions/publishing-packages/publishing-docker-images>))
 
 ##### Dockerfile for static sites (example)
 
@@ -63,7 +69,6 @@ RUN pnpm i
 RUN pnpm run build
 ...
 ```
-
 :::
 
 ##### Dockerfile for SSR sites (example)
