removing .io on Appwrite

--- a/src/pages/en/guides/baas/appwriteio.mdx
+++ b/src/pages/en/guides/baas/appwriteio.mdx
@@ -1,8 +1,8 @@
 ---
-title: Appwrite.io & Astro
+title: Appwrite & Astro
 description: Add authentication, storage, and realtime data to your Astro application
 layout: ~/layouts/BackendAsAServiceLayout.astro
-service: Appwrite.io
+service: Appwrite
 stub: false
 ---
 import FileTree from '~/components/FileTree.astro'
@@ -10,11 +10,11 @@ import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
 
 
-[Appwrite.io](https://appwrite.io/) is a self-hosted backend-as-a-service platform that provides developers with all the core APIs required to build any application.
+[Appwrite](https://appwrite.io/) is a self-hosted backend-as-a-service platform that provides developers with all the core APIs required to build any application.
 
 ## Integrating with Astro
 
-In this section, we'll use the [Appwrite.io JavaScript SDK](https://appwrite.io/docs/getting-started-for-web#getSDK) to connect your Appwrite.io project to Astro.
+In this section, we'll use the [Appwrite JavaScript SDK](https://appwrite.io/docs/getting-started-for-web#getSDK) to connect your Appwrite project to Astro.
 
 ### Prerequisites
 
@@ -22,15 +22,15 @@ To get started, you will need to have the following:
 
 1. **An Astro project** - If you don't have an Astro project yet, our [Installation guide](/en/install/auto/) will get you up and running in no time.
 
-2. **An Appwrite.io instance, or hosted instance**. If you don't have an account, you can [sign up](https://cloud.appwrite.io/login) for a free account and create a new Appwrite.io project. You can also use an existing project if you have one. 
+2. **An Appwrite instance, or hosted instance**. If you don't have an account, you can [sign up](https://cloud.appwrite.io/login) for a free account and create a new Appwrite project. You can also use an existing project if you have one. 
 
-3. **Appwrite.io credentials** - You can find the following credentials in your Appwrite.io console **Project Overview > API key**. 
+3. **Appwrite credentials** - You can find the following credentials in your Appwrite console **Project Overview > API key**. 
 
     - **Project ID** - The ID of your Project (not the name). 
 
 ### Setting up credentials
 
-To add your Appwrite.io project's credentials to Astro, create an `.env` file in the root of your project with the following variables:
+To add your Appwrite project's credentials to Astro, create an `.env` file in the root of your project with the following variables:
 
 :::tip
 You may find that you will need additional environment variables, feel free to continue adding to the `.env` file.
@@ -73,8 +73,8 @@ Your root directory should now include these new files:
 
 ### Installing dependencies
 
-To connect with your Appwrite.io project, install both of the following using the single command below for your preferred package manager:
-- [`appwrite`](https://github.com/appwrite/sdk-for-web), the official Appwrite.io SDK for JavaScript.
+To connect with your Appwrite project, install both of the following using the single command below for your preferred package manager:
+- [`appwrite`](https://github.com/appwrite/sdk-for-web), the official Appwrite SDK for JavaScript.
 
 <PackageManagerTabs>
   <Fragment slot="npm">
@@ -112,7 +112,7 @@ export const appwriteClient = new Client()
     .setProject(import.meta.env.APPWRITE_PROJECT_ID); // Your project ID
 ```
 
-The above code snippet creates a new Appwrite.io client, passing in credentials from the `.env` file. 
+The above code snippet creates a new Appwrite client, passing in credentials from the `.env` file. 
 
 Finally, your root directory should now include these new files:
 
@@ -162,13 +162,13 @@ const entries = await databases.createDocument('[DATABASE_ID]', '[COLLECTION_ID]
 
 ## Making a blog with Astro and Appwrite
 
-With the setup above, you are now able to create a blog that uses Appwrite.io as your backend.
+With the setup above, you are now able to create a blog that uses Appwrite as your backend.
 
 You can find the full example on https://github.com/appwrite/demos-for-astro.
 
 ### Prerequisites
 
-Install Appwrite.io's CLI, if you want to use and additional method see [Appwrite CLI](https://appwrite.io/docs/command-line)
+Install Appwrite's CLI, if you want to use and additional method see [Appwrite CLI](https://appwrite.io/docs/command-line)
 
 <PackageManagerTabs>
   <Fragment slot="npm">
@@ -280,7 +280,7 @@ Deploy the collection based on the above `appwrite.json`.
 
 ### Displaying a list of blog posts
 
-Create a new interface called `BlogPost` and add it to your `appwrite.ts` file in `src/lib/`. This interface will match the attributes of your blog post content type in Appwrite.io. You will use it to type your blog post entries response.
+Create a new interface called `BlogPost` and add it to your `appwrite.ts` file in `src/lib/`. This interface will match the attributes of your blog post content type in Appwrite. You will use it to type your blog post entries response.
 
 ```ts title="src/lib/appwrite.ts"
 import { Client, Databases, Models } from 'appwrite';
@@ -303,7 +303,7 @@ export const appwriteClient = new Client()
 export const appwriteDatabases = new Databases(appwriteClient);
 ```
 
-Next, go to the Astro page `/src/pages/blog/index.astro` where you will fetch data from Appwrite.io's database.
+Next, go to the Astro page `/src/pages/blog/index.astro` where you will fetch data from Appwrite's database.
 
 ```ts title="/src/pages/blog/index.astro"
 ---
