--- a/src/pages/en/guides/deploy/google-cloud.mdx
+++ b/src/pages/en/guides/deploy/google-cloud.mdx
@@ -25,21 +25,7 @@ Cloud Run is a serverless platform that allows you to run a container without ha
 
 4. Make an empty `Dockerfile` in the root of your project.
 
-#### 2. Building the container
-
-There are a few different ways listed below to build a container.
-
-**Locally using Docker**:
-
-This option, requires you to build you `Dockerfile` on your local machine and then push to a remote. You can achieve this with the `docker build` command. If you want to push to a remote from your local machine, you'll have to use `docker push`. In the case of Google Cloud, Artifact registry or Container registry, are the easiest option, but you can also use [Docker hub](<https://hub.docker.com/>).
-
-**Using [Cloud Build](https://cloud.google.com/build)**:
-
-To setup a pipeline with Cloud Build, you have to add a separate `cloudbuild.yaml` file with a description what the pipeline should do. You can [check the Google Cloud Build documentation here](<https://cloud.google.com/build/docs/build-push-docker-image>).
-
-**Using another tool**:
-
-You can also use any other CI/CD tool you like, that supports docker. (e.g. [GitHub Actions](<https://docs.github.com/en/actions/publishing-packages/publishing-docker-images>))
+#### 2. Create the container
 
 ##### Dockerfile for static sites (example)
 
@@ -99,7 +85,23 @@ FROM node:lts-alpine as runtime
 ```
 :::
 
-#### 3. Deploying the container
+#### 3. Building the container
+
+There are a few different ways listed below to build a container.
+
+**Locally using Docker**:
+
+This option, requires you to build you `Dockerfile` on your local machine and then push to a remote. You can achieve this with the `docker build` command. If you want to push to a remote from your local machine, you'll have to use `docker push`. In the case of Google Cloud, Artifact registry or Container registry, are the easiest option, but you can also use [Docker hub](<https://hub.docker.com/>).
+
+**Using [Cloud Build](https://cloud.google.com/build)**:
+
+To setup a pipeline with Cloud Build, you have to add a separate `cloudbuild.yaml` file with a description what the pipeline should do. You can [check the Google Cloud Build documentation here](<https://cloud.google.com/build/docs/build-push-docker-image>).
+
+**Using another tool**:
+
+You can also use any other CI/CD tool you like, that supports docker. (e.g. [GitHub Actions](<https://docs.github.com/en/actions/publishing-packages/publishing-docker-images>))
+
+#### 4. Deploying the container
 
 Deployment can be handled manually in your terminal or automatically using [Cloud Build](https://cloud.google.com/build) or any other CI/CD system.
 
