add `allowJs` note

--- a/src/pages/en/guides/content-collections.mdx
+++ b/src/pages/en/guides/content-collections.mdx
@@ -121,6 +121,21 @@ If you **do not** already extend Astro's `strict` or `strictest` recommended Typ
 }
 ```
 
+:::note
+If your Content Collections configuration file is a JavaScript file (uses the `.mjs` or `.js` file extension), you won't get intellisense by default, unless you're using a `jsconfig.json` file instead of a `tsconfig.json`. To get type checking and intellisense when using a `tsconfig.json` file, you will need to set the `allowJs` compiler option to `true`.
+
+```json title="tsconfig.json" ins={6}
+{
+  // Note: No change needed if you use "astro/tsconfigs/strict" or "astro/tsconfigs/strictest"
+  "extends": "astro/tsconfigs/base",
+  "compilerOptions": {
+    "strictNullChecks": true,
+    "allowJs": true
+  }
+}
+```
+:::
+
 ### Defining a collection schema
 
 Schemas enforce consistent frontmatter within a collection. A schema **guarantees** that your frontmatter exists in a predictable form when you need to reference or query it. If any file violates its collection schema, Astro will provide a helpful error to let you know.
