make sentence more clear

--- a/src/pages/en/guides/content-collections.mdx
+++ b/src/pages/en/guides/content-collections.mdx
@@ -122,7 +122,7 @@ If you **do not** already extend Astro's `strict` or `strictest` recommended Typ
 ```
 
 :::note
-If your Content Collections configuration file is a JavaScript file (uses the `.mjs` or `.js` file extension), you won't get intellisense by default, unless you're using a `jsconfig.json` file instead of a `tsconfig.json`. To get type checking and intellisense when using a `tsconfig.json` file, you will need to set the `allowJs` compiler option to `true`.
+If your Content Collections configuration file is a JavaScript file (uses the `.mjs` or `.js` file extension), you won't get intellisense in that config file by default, unless your project is using a `jsconfig.json` instead of a `tsconfig.json`. To get type checking and intellisense when using a `tsconfig.json`, you will need to update it to enable the `allowJs` compiler option.
 
 ```json title="tsconfig.json" ins={6}
 {
