make note a bit more clear

--- a/src/pages/en/guides/content-collections.mdx
+++ b/src/pages/en/guides/content-collections.mdx
@@ -122,7 +122,8 @@ If you **do not** already extend Astro's `strict` or `strictest` recommended Typ
 ```
 
 :::note
-If your Content Collections configuration file is a JavaScript file (uses the `.mjs` or `.js` file extension), you won't get intellisense in that config file by default, unless your project is using a `jsconfig.json` instead of a `tsconfig.json`. To get type checking and intellisense when using a `tsconfig.json`, you will need to update it to enable the `allowJs` compiler option.
+When using JavaScript files in an Astro project using a `tsconfig.json`, you won't get intellisense or type-checking, unless your project is using a `jsconfig.json`. As such, when using a JavaScript file as your Content Collections configuration file, you won't get those benifits.
+To get type checking and intellisense for JavaScript files in that case, you will need to update your `tsconfig.json` to enable the `allowJs` compiler option.
 
 ```json title="tsconfig.json" ins={6}
 {
