Update structure on "build locally using Docker"

--- a/src/pages/en/guides/deploy/google-cloud.mdx
+++ b/src/pages/en/guides/deploy/google-cloud.mdx
@@ -113,15 +113,14 @@ docker tag SOURCE_IMAGE HOSTNAME/PROJECT-ID/TARGET-IMAGE:TAG
 docker push HOSTNAME/PROJECT-ID/IMAGE:TAG
 ```
 
-:::note[Replace variables]
-Replace the following:
+Change the following values in the commands above to match your project:
 
-`SOURCE_IMAGE` is the local image name or image ID.
-`HOSTNAME` is the registry host (`gcr.io`, `eu.grc.io`, `asia.gcr.io`, `us.gcr.io`).
-`PROJECT` is your Google Cloud project ID.
-`TARGET-IMAGE` is the name for the image when it's stored in the registry.
-`TAG` is the version associated with the image
-:::
+- `SOURCE_IMAGE`: the local image name or image ID.
+- `HOSTNAME`: the registry host (`gcr.io`, `eu.grc.io`, `asia.gcr.io`, `us.gcr.io`).
+- `PROJECT`: your Google Cloud project ID.
+- `TARGET-IMAGE`: the name for the image when it's stored in the registry.
+- `TAG` is the version associated with the image
+
 
 [Read more in the Google Cloud docs.](https://cloud.google.com/container-registry/docs/pushing-and-pulling)
 
