--- a/src/pages/en/reference/publish-to-npm.mdx
+++ b/src/pages/en/reference/publish-to-npm.mdx
@@ -98,7 +98,7 @@ The `package.json` in the package directory includes all of the information rela
 }
 ```
 
-#### `description`
+#### `package.json#description`
 
 A short description of your component used to help others know what it does.
 
@@ -108,7 +108,7 @@ A short description of your component used to help others know what it does.
 }
 ```
 
-#### `type`
+#### `package.json#type`
 
 The module format used by Node.js and Astro to interpret your `index.js` files.
 
@@ -120,7 +120,7 @@ The module format used by Node.js and Astro to interpret your `index.js` files.
 
 We recommend using `"type": "module"` so that your `index.js` can be used as an entrypoint with `import` and `export`.
 
-### `package.json#homepage`
+#### `package.json#homepage`
 
 The url to the project homepage.
 
@@ -148,7 +148,7 @@ The entry points of a package when imported by name.
 
 In this example, importing `my-component` would use `index.js`, while importing `my-component/astro` or `my-component/react` would use `MyAstroComponent.astro` or `MyReactComponent.jsx` respectively.
 
-#### `files`
+#### `package.json#files`
 
 This is an optional optimization to exclude unnecessary files from the bundle shipped to users via npm. Note that **only files listed here will be included in your package**, so if you add or change files necessary for your package to work, you must update this list accordingly.
 
@@ -158,7 +158,7 @@ This is an optional optimization to exclude unnecessary files from the bundle sh
 }
 ```
 
-#### `keywords`
+#### `package.json#keywords`
 
 An array of keywords relevant to your component that are used to help others [find your component on npm](https://www.npmjs.com/search?q=keywords:astro-component,withastro) and in any other search catalogs.
 
