--- a/src/pages/zh-cn/reference/publish-to-npm.mdx
+++ b/src/pages/zh-cn/reference/publish-to-npm.mdx
@@ -272,17 +272,17 @@ my-project/demo/src/pages/__fixtures__/
 
 ### 集合
 
-除了必要的 `astro-component` 关键词外，我们也会使用特殊的关键词将模块进行分类。包括以下任一关键词都会将你的集成添加到相应的集合中。
+除了必要的 `astro-component` 或 `withastro` 关键词外，我们也会使用特殊的关键词将模块进行分类。包括以下任一关键词都会将你的集成添加到相应的集合中。
 
-| 集合        | 关键词                                    |
+| 集合         | 关键词                                    |
 |------------ | ---------------------------------------- |
-| 全部         | `astro-component`                        |
-| 统计         | `analytics`                              |
-| CMS         | `cms`, `database`                        |
-| CSS + UI    | `css`, `ui`, `icon`, `icons`, `renderer` |
-| 电商        | `ecommerce`, `e-commerce`                |
-| 性能         | `performance`, `perf`                    |
-| SEO         | `seo`, `performance`, `perf`             |
+| 辅助功能    | `a11y`, `accessibility`                       |
+| 适配器      | `astro-adapter`                               |
+| 统计        | `analytics`                                   |
+| CSS + UI   | `css`, `ui`, `icon`, `icons`, `renderer`      |
+| 框架        | `renderer`                                    |
+| 性能 + SEO  | `performance`, `perf`, `seo`, `optimization`  |
+
 
 ## 分享
 
