--- a/src/pages/zh-cn/guides/content.mdx
+++ b/src/pages/zh-cn/guides/content.mdx
@@ -7,7 +7,7 @@ i18nReady: true
 ---
 Astro 是以内容为中心的网站的完美选择：博客、营销网站、作品集等！
 
-Astro 帮助你创作和展示你的内容。你可以直接在 Astro 使用 Markdown/MDX 写作博客，也可以从你的无头CMS中获取内容。 Astro 让你围绕你的内容建立一个网站：你可以在你的页面上添加一个布局，创建一个帖子的索引，并建立一个RSS源，让读者可以订阅。
+Astro 帮助你创作和展示你的内容。你可以直接在 Astro 中使用 Markdown/MDX 写作博客，也可以从你的无头CMS中获取内容。 Astro 让你围绕你的内容建立一个网站：你可以在你的页面上添加一个布局，创建一个帖子的索引，并建立一个RSS源，让读者可以订阅。
 
 ## 编写内容
 
