--- a/src/pages/zh-cn/reference/publish-to-npm.mdx
+++ b/src/pages/zh-cn/reference/publish-to-npm.mdx
@@ -260,7 +260,7 @@ my-project/demo/src/pages/__fixtures__/
 
 ### `package.json` 数据
 
-该库每晚自动更新，拉入每一个使用 `astro-component` 关键字发布到 NPM 的模块。
+该库每晚自动更新，拉入每一个使用 `astro-component` 或者 `withastro` 关键字发布到 NPM 的模块。
 
 它会从模块的 `package.json` 文件中读取 `name`、`description`、`repository` 和 `homepage` 数据。
 
