--- a/src/pages/zh-cn/guides/content.mdx
+++ b/src/pages/zh-cn/guides/content.mdx
@@ -11,7 +11,7 @@ Astro 帮助你创作和展示你的内容。你可以直接在 Astro 中使用 
 
 ## 编写内容
 
-在 Astro ，你可以通过多种方式创作内容: 
+在 Astro 中，你可以通过多种方式创作内容：
 - 在 Markdown 文件中 (`.md` or [其他扩展名](/zh-cn/guides/markdown-content/))，旨在使编写富文本内容变得容易。
 - 在 MDX (`.mdx`) 文件中，允许你在文档中包含组件和动态表达式。
 - 使用第三方内容管理系统 (CMS），然后将该内容拉取到 `.astro` 页面中。
