--- a/src/pages/zh-cn/guides/styling.mdx
+++ b/src/pages/zh-cn/guides/styling.mdx
@@ -182,7 +182,7 @@ Astro 支持在项目中添加流行的 CSS 库、工具和框架，如 [Tailwin
 
 ## CSS 预处理器
 
-Astro 支持通过 [Vite][vite-preprocessors] 使用 CSS 预处理器，如 [Sass][sass]、[Stylus][stylus] 和 [Less][less]，。
+Astro 支持通过 [Vite][vite-preprocessors] 使用 CSS 预处理器，如 [Sass][sass]、[Stylus][stylus] 和 [Less][less]。
 
 ### Sass
 
