i18n(zh-cn): Update project-structure.mdx

--- a/src/pages/zh-cn/core-concepts/project-structure.mdx
+++ b/src/pages/zh-cn/core-concepts/project-structure.mdx
@@ -116,4 +116,4 @@ JavaScript 包管理器用它来管理依赖关系。它也定义了通常用于
 
 此文件在每个启动器模板中都会生成，它包括你的 Astro 项目的 TypeScript 配置项。如果没有 `tsconfig.json` 文件，编辑器将不完全支持某些功能（如 npm 包的导入）。
 
-关于设置配置的细节，请参见 [TypeScript 指南](/zh-cn/guides/typescript/)。
+参见 [TypeScript 指南](/zh-cn/guides/typescript/)了解关于配置的更多细节。
