--- a/src/pages/zh-cn/reference/publish-to-npm.mdx
+++ b/src/pages/zh-cn/reference/publish-to-npm.mdx
@@ -276,7 +276,7 @@ my-project/demo/src/pages/__fixtures__/
 
 | 集合         | 关键词                                    |
 |------------ | ---------------------------------------- |
-| 辅助功能    | `a11y`, `accessibility`                       |
+| 无障碍辅助功能| `a11y`, `accessibility`                       |
 | 适配器      | `astro-adapter`                               |
 | 统计        | `analytics`                                   |
 | CSS + UI   | `css`, `ui`, `icon`, `icons`, `renderer`      |
